iphone 6 cant click some buttons that navbar overlaps, i fixed

--- a/public/styles.css
+++ b/public/styles.css
@@ -572,7 +572,7 @@ main {
 	}
 	.study-set-form {
 		width: 95vw;
-		height: 85vh;
+		height: 80vh;
 	}
 
 	.card-text {
@@ -581,7 +581,7 @@ main {
 
 	#load-tests {
 		width: 95vw;
-		height: 85vh;
+		height: 80vh;
 	}
 
 	main {
